@@ -190,7 +190,7 @@ class FamilyView:
 
         if not already_init:
             Utils.build_columns(self.child_list,
-                                [ ('',30,0), (_('Name'),250,-1), (_('ID'),50,-1),
+                                [ (' ',30,0), (_('Name'),250,-1), (_('ID'),50,-1),
                                   (_('Gender'),100,-1), (_('Birth date'),150,6),
                                   (_('Status'),100,-1), ('',0,-1) ])
         self.cadded[fv] = 1
@@ -810,8 +810,9 @@ class FamilyView:
             if fiter == None:
                 fiter = self.child_model.get_path(iter)
             val = self.parent.db.getPersonDisplay(child.getId())
+            i += 1
             self.child_model.set(iter,
-                                 0,(i+1),
+                                 0,i,
                                  1,val[0],
                                  2,val[1],
                                  3,val[2],
